--- a/templates/home.html
+++ b/templates/home.html
@@ -148,6 +148,7 @@
                         // Parse the response JSON
                         var response = JSON.parse(xhr.responseText);
                         var channels = response.channels;
+                        var friends = response.friends;
 
                         // Get the sidebar element
                         var sidebar = document.getElementById("channels");
@@ -156,8 +157,8 @@
                         sidebar.innerHTML = "";
 
                         // Add the "Channels: " header
-                        var channelsHeader = document.createElement("div");
-                        channelsHeader.textContent = "Channels: ";
+                        var channelsHeader = document.createElement("br");
+                        //channelsHeader.textContent = "Channels: ";
                         sidebar.appendChild(channelsHeader);
 
                         // Add each channel to the sidebar
@@ -168,6 +169,26 @@
                             var channelLink = document.createElement("a");
                             channelLink.href = "#";
                             channelLink.textContent = "#" + channel; // Add "#" to the start of the channel name
+
+                            channelLink.addEventListener("click", function() {
+                                // Set the channelId variable to the channel's id
+                                channelId = channel;
+                                refreshMessages();
+                            });
+
+                            channelElement.appendChild(channelLink);
+                            sidebar.appendChild(channelElement);
+                        });
+
+                        // Add each channel to the sidebar
+                        friends.forEach(function(channel) {
+                            channel = "@"+channel;
+                            var channelElement = document.createElement("div");
+                            channelElement.classList.add("channel");
+
+                            var channelLink = document.createElement("a");
+                            channelLink.href = "#";
+                            channelLink.textContent = channel;
 
                             channelLink.addEventListener("click", function() {
                                 // Set the channelId variable to the channel's id
