--- a/templates/profile.html
+++ b/templates/profile.html
@@ -117,7 +117,7 @@
             profilePicture.addEventListener("click", function() {
                 var newUrl = prompt("Enter the new profile picture URL (None to reset)");
                 if (newUrl == '') {
-                    profilePicture.src = "https://i.pinimg.com/550x/18/b9/ff/18b9ffb2a8a791d50213a9d595c4dd52.jpg";
+                    profilePicture.src = "https://awesnap.dev/default_profile_picture.jpg";
                 }
                 if (newUrl) {
                     profilePicture.src = newUrl;
@@ -127,10 +127,16 @@
             var saveButton = document.createElement("button");
             saveButton.innerHTML = "Save";
             saveButton.classList.add("return-button");
+            var logoutButton = document.createElement("button");
+            logoutButton.innerHTML = "Logout";
+            logoutButton.classList.add("return-button");
             var returnButton = document.querySelector(".return-button");
             returnButton.parentNode.insertBefore(saveButton, returnButton.nextSibling);
+            returnButton.parentNode.insertBefore(logoutButton, returnButton.nextSibling);
             saveButton.style.marginLeft = "100px"; // Add this line to create space between the buttons
             saveButton.style.display = "block"; // Add this line to make the button visible
+            logoutButton.style.marginLeft = "175px"; // Add this line to create space between the buttons
+            logoutButton.style.display = "block"; // Add this line to make the button visible
 
             saveButton.addEventListener("click", function() {
                 var xhr = new XMLHttpRequest();
@@ -153,6 +159,10 @@
                     profileUrl: profilePicture.src // Add this line to include the profile picture URL in the data
                 };
                 xhr.send(JSON.stringify(data));
+            });
+
+            logoutButton.addEventListener("click",function() {
+                window.location.href = "/logout";
             });
         } else {
             if (isFriend === "True") {
